[package]
name = "stamm"
version = "0.1.0"
authors = ["Entscheider"]
description = "A library for implementing custom decision trees and random forests"
license = "Apache-2.0"
categories = ["Science"]
repository = "https://github.com/Entscheider/stamm"

[dependencies]
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
rayon = "0.8"

[dev-dependencies]
serde_json = "1.0"